# PaSe-hs

./: .gitignore  LICENSE  PaSe-hs.cabal  PaSe.cabal  README.md  stack.yaml
PaSe/: CHANGELOG.md  PaSe.cabal
PaSe-benchmarks/: PaSe-benchmarks.cabal
PaSe-benchmarks/Benchmark/: Main.hs
PaSe-benchmarks/Comparison/: Main.hs
PaSe-benchmarks/scripts/: benchmark
PaSe-examples/: PaSe-examples.cabal
PaSe-examples/Demo/: Sprite.hs
PaSe-examples/Pacman/: AnimDefs.hs  Anims.hs  Field.hs  Game.hs  Main.hs  Sprite.hs  Textures.hs  Types.hs  View.hs
PaSe-examples/Story/: Main.hs
PaSe/src/: PaSe.hs
PaSe/src/PaSe/: Animation.hs  Mtl.hs  Prelude.hs  Types.hs
assets/: credits.txt
examples/: AnimDefs.hs  Anims.hs  Game.hs  Main.hs  Sprite.hs  Textures.hs  View.hs
examples/Story/: Main.hs
src/: PaSe.hs
src/PaSe/: Animation.hs  Mtl.hs  Types.hs
src/PaSe/Arrow/: Const.hs  Mtl.hs
