cabal-version: 1.12

name:           PaSe-hs
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/rubenpieters/PaSe-hs#readme>
homepage:       https://github.com/rubenpieters/PaSe-hs#readme
bug-reports:    https://github.com/rubenpieters/PaSe-hs/issues
author:         Ruben Pieters
maintainer:     rubenpietersgithub@gmail.com
copyright:      2020 Ruben Pieters
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/rubenpieters/PaSe-hs

library
  exposed-modules:
      PaSe
  other-modules:
      PaSe.Animation
      PaSe.Mtl
      PaSe.Types
      PaSe.Arrow.Mtl
      PaSe.Arrow.Const
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , microlens
    , mtl
  default-language: Haskell2010

executable demo-app
  main-is: Main.hs
  other-modules:
      AnimDefs
      Anims
      Game
      Sprite
      Textures
      View
  hs-source-dirs:
      examples
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      PaSe-hs
    , base >=4.7 && <5
    , sdl2
    , sdl2-image
    , containers
    , microlens
    , microlens-th
    , mtl

  default-language: Haskell2010

executable story-example
  main-is: Main.hs
  other-modules:
  hs-source-dirs:
      examples/Story
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      PaSe-hs
    , base >=4.7 && <5
    , gloss
    , containers
    , microlens
    , microlens-th
    , mtl

  default-language: Haskell2010

test-suite PaSe-hs-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_PaSe_hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      PaSe-hs
    , base >=4.7 && <5
  default-language: Haskell2010
