cabal-version: 1.12

name:           PaSe-benchmarks
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/rubenpieters/PaSe-hs#readme>
homepage:       https://github.com/rubenpieters/PaSe-hs#readme
bug-reports:    https://github.com/rubenpieters/PaSe-hs/issues
author:         Ruben Pieters
maintainer:     rubenpietersgithub@gmail.com
copyright:      2020 Ruben Pieters
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:


source-repository head
  type: git
  location: https://github.com/rubenpieters/PaSe-hs

executable benchmark
  main-is: Main.hs
  other-modules:
  hs-source-dirs:
      Benchmark
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      PaSe
    , base >=4.7 && <5
    , gloss
    , gloss-export
    , microlens
    , microlens-th
    , mtl

  default-language: Haskell2010

